# Phys607_project2

./: Code Test Center.ipynb  README.md  main.py  pyproject.toml  rlc.py
.ipynb_checkpoints/: Code Test Center-checkpoint.ipynb
src/: main.py  photon.py  rlc.py
src/Phys607_project2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
