[project]
name = "Phys607_project2"
version = "0.0.1"
authors = [
  { name="John Batarekh", email="jvbatare@syr.edu" },
  { name="Aleyna Akyuz", email="aakyuz@syr.edu"}
]
description = "Package for Project 2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aleynaakyuz/Phys607_project2"
"Bug Tracker" = "https://github.com/aleynaakyuz/Phys607_project2/issues"